--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         }
         #a1 div:nth-child(2){
             animation: wobble 1.5s linear 2s both;
+            -webkit-animation: wobble 1.5s linear 2s both;
         }
         .a1 p:nth-child(3){
             width: 110px;
@@ -95,15 +96,19 @@
         }
         #a1 p:nth-child(3){
             animation: flipInX 1s linear 0s both;
+            -webkit-animation: flipInX 1s linear 0s both;
         }
         #a1 p:nth-child(4){
             animation: flipInX 1s linear 0.5s both;
+            -webkit-animation: flipInX 1s linear 0.5s both;
         }
         #a1 p:nth-child(5){
             animation: flipInX 1s linear 1s both;
+            -webkit-animation: flipInX 1s linear 1s both;
         }
         #a1 p:nth-child(6){
             animation: flipInX 1s linear 1.5s both;
+            -webkit-animation: flipInX 1s linear 1.5s both;
         }
 
         .a1 p:nth-child(4){
@@ -141,6 +146,7 @@
 
         #a1 div:nth-child(7){
             animation: swing 3s linear 2s infinite;
+            -webkit-animation: swing 3s linear 2s infinite;
         }
         .a2>div:nth-child(1){
             width: 100px;
@@ -194,18 +200,23 @@
         }
         #a2>div:nth-child(1){
             animation: move  0.5s linear 0s  both;
+            -webkit-animation: move  0.5s linear 0s  both;
         }
         #a2>div:nth-child(3){
             animation: move  0.5s linear 0.5s  both;
+            -webkit-animation: move  0.5s linear 0.5s  both;
         }
         #a2>div:nth-child(5){
             animation: move  0.5s linear 1s  both;
+            -webkit-animation: move  0.5s linear 1s  both;
         }
         #a2>div:nth-child(7){
             animation: move  0.5s linear 1.5s  both;
+            -webkit-animation: move  0.5s linear 1.5s  both;
         }
         #a2>div:nth-child(9){
             animation: move  0.5s linear 2s  both;
+            -webkit-animation: move  0.5s linear 2s  both;
         }
 
         .a2>div:nth-child(2){
@@ -259,15 +270,19 @@
         }
         #a2>div:nth-child(2){
             animation: _move  0.5s linear 0s  both;
+            -webkit-animation: _move  0.5s linear 0s  both;
         }
         #a2>div:nth-child(4){
             animation: _move  0.5s linear 0.5s  both;
+            -webkit-animation: _move  0.5s linear 0.5s  both;
         }
         #a2>div:nth-child(6){
             animation: _move  0.5s linear 1s  both;
+            -webkit-animation: _move  0.5s linear 1s  both;
         }
         #a2>div:nth-child(8){
             animation: _move  0.5s linear 1.5s  both;
+            -webkit-animation: _move  0.5s linear 1.5s  both;
         }
         @keyframes move{
             0% {
@@ -347,18 +362,23 @@
         }
         #a2>p:nth-of-type(1){
             animation: zoomIn  0.5s linear 0s  both;
+            -webkit-animation: zoomIn  0.5s linear 0s  both;
         }
         #a2>p:nth-of-type(2){
             animation: zoomIn  0.5s linear 0.5s  both;
+            -webkit-animation: zoomIn  0.5s linear 0.5s  both;
         }
         #a2>p:nth-of-type(3){
             animation: zoomIn  0.5s linear 1s  both;
+            -webkit-animation: zoomIn  0.5s linear 1s  both;
         }
         #a2>p:nth-of-type(4){
             animation: zoomIn  0.5s linear 1.5s  both;
+            -webkit-animation: zoomIn  0.5s linear 1.5s  both;
         }
         #a2>p:nth-of-type(5){
             animation: zoomIn  0.5s linear 2s  both;
+            -webkit-animation: zoomIn  0.5s linear 2s  both;
         }
 
         .a2>div:nth-child(15){
@@ -375,6 +395,7 @@
         }
         #a2 div:nth-child(15){
             animation: rubberBand 3s linear 0s infinite;
+            -webkit-animation: rubberBand 3s linear 0s infinite;
         }
         .a3>p:nth-child(1){
             position: absolute;
@@ -391,6 +412,7 @@
 
         #a3>p:nth-child(1){
             animation: pulse 1s linear 0s infinite;
+            -webkit-animation: pulse 1s linear 0s infinite;
         }
         .a3 span:nth-of-type(1){
             display: inline-block;
@@ -399,6 +421,7 @@
             left: 30%;
             font-size: 80px;
             transform: rotate(30deg);
+            -webkit-transform: rotate(30deg);
         }
         .a3 span:nth-of-type(2){
             display: inline-block;
@@ -516,18 +539,23 @@
         }
         #a3>p:nth-child(3){
             animation: rotatingX 1s linear 0s  both;
+            -webkit-animation: rotatingX 1s linear 0s  both;
         }
         #a3>p:nth-child(4){
             animation: rotatingX 1s linear 0.5s  both;
+            -webkit-animation: rotatingX 1s linear 0.5s  both;
         }
         #a3>p:nth-child(5){
             animation: rotatingY 1s linear 1s  both;
+            -webkit-animation: rotatingY 1s linear 1s  both;
         }
         #a3>p:nth-child(6){
             animation: rotatingY 1s linear 1.5s  both;
+            -webkit-animation: rotatingY 1s linear 1.5s  both;
         }
         #a3>p:nth-child(7){
             animation: rotatingX 1s linear 2s  both;
+            -webkit-animation: rotatingX 1s linear 2s  both;
         }
         @-webkit-keyframes rotatingX {
             0% {
@@ -583,6 +611,7 @@
         }
         #a3 div:nth-child(8){
             animation: rubberBand 3s linear 0s infinite;
+            -webkit-animation: rubberBand 3s linear 0s infinite;
         }
 
         .a4>div{
@@ -667,52 +696,68 @@
 
         #a4>div:nth-of-type(1){
             animation: leftIn 1s ease-out both 0s;
+            -webkit-animation: leftIn 1s ease-out both 0s;
         }
         #a4>div:nth-of-type(2){
             animation: leftIn 1s ease-out both 0.3s;
+            -webkit-animation: leftIn 1s ease-out both 0.3s;
         }
         #a4>div:nth-of-type(3){
             animation: leftIn 1s ease-out both 0.6s;
+            -webkit-animation: leftIn 1s ease-out both 0.6s;
         }
         #a4>div:nth-of-type(4){
             animation: leftIn 1s ease-out both 0.9s;
+            -webkit-animation: leftIn 1s ease-out both 0.9s;
         }
         #a4>div:nth-of-type(5){
             animation: leftIn 1s ease-out both 1.2s;
+            -webkit-animation: leftIn 1s ease-out both 1.2s;
         }
         #a4>div:nth-of-type(6){
             animation: leftIn 1s ease-out both 1.5s;
+            -webkit-animation: leftIn 1s ease-out both 1.5s;
         }
         #a4>div:nth-of-type(7){
             animation: leftIn 1s ease-out both 1.8s;
+            -webkit-animation: leftIn 1s ease-out both 1.8s;
         }
         #a4>div:nth-of-type(8){
             animation: leftIn 1s ease-out both 2.1s;
+            -webkit-animation: leftIn 1s ease-out both 2.1s;
         }
 
         #a4>p:nth-of-type(1){
             animation: rightIn 1s ease-out both 0s;
+            -webkit-animation: rightIn 1s ease-out both 0s;
         }
         #a4>p:nth-of-type(2){
             animation: rightIn 1s ease-out both 0.3s;
+            -webkit-animation: rightIn 1s ease-out both 0.3s;
         }
         #a4>p:nth-of-type(3){
             animation: rightIn 1s ease-out both 0.6s;
+            -webkit-animation: rightIn 1s ease-out both 0.6s;
         }
         #a4>p:nth-of-type(4){
             animation: rightIn 1s ease-out both 0.9s;
+            -webkit-animation: rightIn 1s ease-out both 0.9s;
         }
         #a4>p:nth-of-type(5){
             animation: rightIn 1s ease-out both 1.2s;
+            -webkit-animation: rightIn 1s ease-out both 1.2s;
         }
         #a4>p:nth-of-type(6){
             animation: rightIn 1s ease-out both 1.5s;
+            -webkit-animation: rightIn 1s ease-out both 1.5s;
         }
         #a4>p:nth-of-type(7){
             animation: rightIn 1s ease-out both 1.8s;
+            -webkit-animation: rightIn 1s ease-out both 1.8s;
         }
         #a4>p:nth-of-type(8){
             animation: rightIn 1s ease-out both 2.1s;
+            -webkit-animation: rightIn 1s ease-out both 2.1s;
         }
         .a4>p:nth-of-type(1){
             position: absolute;
@@ -785,6 +830,7 @@
         }
         #a4>div:nth-child(17){
             animation: rubberBand 3s linear 0s infinite;
+            -webkit-animation: rubberBand 3s linear 0s infinite;
         }
         .a5>p:nth-child(1){
             font-family: "楷体";
@@ -834,6 +880,7 @@
         }
         #a5>div:nth-child(5){
             animation: rubberBand1 2s linear 3s both;
+            -webkit-animation: rubberBand1 2s linear 3s both;
         }
         .a5>div:nth-child(6){
             width: 48px;
@@ -849,12 +896,14 @@
         }
         #a5>div:nth-child(6){
             animation: rubberBand 3s linear 4s infinite;
+            -webkit-animation: rubberBand 3s linear 4s infinite;
         }
 
 
 
         #a5>p:nth-of-type(1){
             animation: jump 1s ease-out both 0s;
+            -webkit-animation: jump 1s ease-out both 0s;
         }
         @-webkit-keyframes jump {
             0% {
@@ -879,12 +928,15 @@
 
         #a5>p:nth-of-type(2){
             animation: roll 1s ease-out both 1s;
+            -webkit-animation: roll 1s ease-out both 1s;
         }
         #a5>p:nth-of-type(3){
             animation: roll 1s ease-out both 1.5s;
+            -webkit-animation: roll 1s ease-out both 1.5s;
         }
         #a5>p:nth-of-type(4){
             animation: roll 1s ease-out both 2s;
+            -webkit-animation: roll 1s ease-out both 2s;
         }
 
         @-webkit-keyframes roll {
